# auto-gpt

./: .env  Cargo.toml
src/: main.rs
src/ai_functions/: aifunc_architect.rs
src/apis/: call_request.rs  mod.rs
src/helpers/: command_line.rs  general.rs
src/models/agent_basic/: basic_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
