[package]
name = "auto_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.68"
crossterm = "0.26.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
strum = "0.25.0"
strum_macros = "0.25.0"
tokio = { version = "1.28.2", features = ["full"] }
webbrowser = "0.8.10"
